--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -17,7 +17,7 @@ script_encryption_key=""
 
 [preset.0.options]
 
-custom_template/debug="../godot-launcher/bin/godot.javascript.opt.debug.64.threads.zip"
+custom_template/debug="../godot-launcher/bin/godot.javascript.opt.threads.zip"
 custom_template/release="../godot-launcher/bin/godot.javascript.opt.debug.64.threads.zip"
 variant/export_type=1
 vram_texture_compression/for_desktop=true
